--- a/landing.html
+++ b/landing.html
@@ -105,10 +105,10 @@
                 </div>
                 <!-- Right: Video -->
                 <div class="col-md-6">
-                    <video id="loveVideo" width="100%" height="600" muted playsinline loop>
+                    <video width="100%" height="600" autoplay loop muted playsinline>
                         <source src="images/Video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
-                    </video>                    
+                    </video>
                 </div>
             </div>
         </div>
