--- a/landing.html
+++ b/landing.html
@@ -105,7 +105,7 @@
                 </div>
                 <!-- Right: Video -->
                 <div class="col-md-6">
-                    <video width="100%" height="600" autoplay loop muted playsinline>
+                    <video width="100%" height="600" id="loveVideo" loop muted playsinline>
                         <source src="images/Video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
